# ai-habit-tracker

./: .env.example  pyproject.toml  requirements.txt
bot/: main.py
bot/handlers/: __init__.py  checkin.py  start.py
bot/keyboards/: menu.py
bot/services/: ai_service.py  scheduler.py  storage.py
