[project]
name = "ai-habit-tracker"
version = "0.1.0"
description = "AI-дневник привычек — Telegram бот-коуч"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.27,<4.0",
    "aiohttp>=3.9",
    "python-dotenv>=1.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
